# codotaku_engine

./: .gitignore  Cargo.toml  README.md
devres/shaders/: shader.vert
engine/: Cargo.toml  build.rs
engine/devres/shaders/: push_constants.glsl  shader.frag  shader.vert
engine/src/: buffer.rs  image.rs  lib.rs  rendering_context.rs
engine/src/renderer/: commands.rs  geometry.rs  mod.rs  staging_belt.rs  swapchain.rs  window_renderer.rs
res/shaders/: vert.spv
src/: main.rs
src/app/: mod.rs
src/app/engine/: mod.rs  rendering_context.rs
src/app/engine/renderer/: mod.rs  swapchain.rs  window_renderer.rs
