[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.19.0", features = ["derive"] }
nalgebra = { version = "0.33.1", features = ["bytemuck"] }
tracing = "0.1.40"
winit = "0.30.5"
anyhow = "1.0.91"
gpu-allocator = { version = "0.27.0", default-features = false, features = ["vulkan"] }
renderdoc = "0.12.1"
tobj = "4.0.2"
itertools = "0.13.0"
image = "0.25.4"

[build-dependencies]
shaderc = "0.8.3"
anyhow = "1.0.91"

[profile.release]
codegen-units = 1
lto = "thin"
